feat: cleaning the .env.example variables

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-FLASK_ENV=development
-DATABASE = interview-test   
-COLLECTION = products
-USER = gustavo
-PASSWORD = 1234
+FLASK_ENV=
+DATABASE = 
+COLLECTION = 
+USER = 
+PASSWORD = 
